Fix overlap of stacked inline code elements (#696)

--- a/website/src/styles/_global.scss
+++ b/website/src/styles/_global.scss
@@ -29,7 +29,7 @@ code {
   font-family: "Fira Code", monospace !important;
   tab-size: 2 !important;
   background-color: rgba(0, 0, 0, 0.08);
-  padding: 5px;
+  padding: 0 5px;
 }
 
 p {
